# wasmedge-nn-training

./: .gitignore  Cargo.toml  README.md  resnet.py
examples/pytorch/resnet-pytorch/: Cargo.toml  README.md
examples/pytorch/resnet-pytorch/src/: main.rs
examples/tensorflow/custom-model/: README.md  custom_model.py
examples/tensorflow/custom-model/run-custom-model/: Cargo.toml
examples/tensorflow/custom-model/run-custom-model/src/: main.rs
examples/tensorflow/regression/: README.md  regression.py
examples/tensorflow/regression/model/: regression.py
examples/tensorflow/regression/regression-tf/: Cargo.toml
examples/tensorflow/regression/regression-tf/src/: main.rs
resnet-pytorch/: Cargo.toml
resnet-pytorch/src/: main.rs
wasmedge-nn-common/: Cargo.toml
wasmedge-nn-common/src/: lib.rs
wasmedge-nn-training/: Cargo.toml
wasmedge-nn-training/src/: lib.rs
