[package]
name = "wasmedge-nn-training"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
byteorder = "1.4.3"
num = "0.4.0"
tch = { version = "0.10.3", optional = true }
wasmedge-sdk = {path = "/root/workspace/WasmEdge/bindings/rust/wasmedge-sdk", features = ["ffi"]}
wasmedge-nn-common = { path = "../wasmedge-nn-common" }
tensorflow = { version = "0.20.0", optional = true }

rand = "0.8.5"

[features]
default = []
torch = ["dep:tch"]
tensorflow = ["dep:tensorflow"]